crates/ink/tests/ui/trait_def/fail/definition_super_trait_invalid_1.stderr
error: ink! trait definitions with supertraits are not supported, yet
 --> tests/ui/trait_def/fail/definition_super_trait_invalid_1.rs:4:28
  |
4 | pub trait TraitDefinition: SuperTraitDefinition {
  |                            ^^^^^^^^^^^^^^^^^^^^
